[gd_scene load_steps=2 format=3 uid="uid://g4jkr40ugd1a"]

[ext_resource type="Script" uid="uid://d18xtt5pagwl5" path="res://UI/Menus/options_panel.gd" id="1_script"]

[node name="OptionsPanel" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Options"
horizontal_alignment = 1

[node name="MasterVolumeHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MasterVolumeHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MasterVolumeHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="MusicVolumeHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MusicVolumeHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MusicVolumeHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="SFXVolumeHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SFXVolumeHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "SFX Volume"

[node name="SFXVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/SFXVolumeHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="FullscreenHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/FullscreenHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fullscreen"

[node name="FullscreenCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer/FullscreenHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Back"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/MasterVolumeHBox/MasterVolumeSlider" to="." method="_on_master_volume_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MusicVolumeHBox/MusicVolumeSlider" to="." method="_on_music_volume_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SFXVolumeHBox/SFXVolumeSlider" to="." method="_on_sfx_volume_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/FullscreenHBox/FullscreenCheckbox" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
